# serializer version: 1
# name: test_entity_attributes[climate.climate1-original_name]
  'Climate1'
# ---
# name: test_entity_state[climate.climate1-current_temperature]
  None
# ---
# name: test_entity_state[climate.climate1-hvac_modes]
  set({
    <HVACMode.HEAT: 'heat'>,
    <HVACMode.OFF: 'off'>,
  })
# ---
# name: test_entity_state[climate.climate1-max_temp]
  40.0
# ---
# name: test_entity_state[climate.climate1-min_temp]
  0.0
# ---
# name: test_entity_state[climate.climate1-supported_features]
  <ClimateEntityFeature: 385>
# ---
# name: test_entity_state[climate.climate1-temperature]
  None
# ---
# name: test_setup_lcn_climate[climate.climate1-state]
  'heat'
# ---
